--- a/src/app/auth/login/login/login.component.html
+++ b/src/app/auth/login/login/login.component.html
@@ -1,10 +1,10 @@
 <h1>Login</h1>
-<form>
+<form formGroup]="loginForm" >
   <label for="email">Email:</label>
-  <input type="email" id="email" name="email"><br><br>
+  <input type="email" class="form-control" id="email" formControlName="email" ><br><br>
 
   <label for="password">Password:</label>
-  <input type="password" id="password" name="password"><br><br>
+  <input type="password"class="form-control"  id="password" formControlName="password" ><br><br>
 
   <input type="submit" value="Submit">
   <div><p class="text-center">Don't have an account? <a routerLink="/signup">Create Account</a></p></div>
