--- a/src/app/auth/signup/signup/signup.component.html
+++ b/src/app/auth/signup/signup/signup.component.html
@@ -1,19 +1,19 @@
 <h1>Create Account</h1>
-<form>
+<form [formGroup]="signupForm">
   <label for="name">First Name</label>
-  <input type="text" id="name" name="name"><br><br>
+  <input type="text" class="form-control" id="first_name" formControlName="first_name"><br><br>
 
   <label for="name">Last Name</label>
-  <input type="text" id="name" name="name"><br><br>
+  <input type="text"class="form-control" id="last_name" formControlName="last_name" ><br><br>
 
   <label for="email">Email</label>
-  <input type="email" id="email" name="email"><br><br>
+  <input type="email" class="form-control" id="email" formControlName="email" ><br><br>
 
   <label for="password">Password</label>
-  <input type="password" id="password" name="password"><br><br>
+  <input type="password" class="form-control"  id="password" formControlName="password"><br><br>
 
   <label for="password">Password Confirmation</label>
-  <input type="password" id="password" name="password"><br><br>
+  <input type="password" lass="form-control"  id="password_confirmation" formControlName="password_confirmation"><br><br>
 
   <input type="submit" value="Submit">
   <div><p class="text-center">Already have an account? <a routerLink="/login">Login</a></p></div>
