--- a/src/app/auth/login/login/login.component.html
+++ b/src/app/auth/login/login/login.component.html
@@ -1,5 +1,5 @@
 <h1>Login</h1>
-<form formGroup]="loginForm" >
+<form [formGroup]="loginForm" >
   <label for="email">Email:</label>
   <input type="email" class="form-control" id="email" formControlName="email" ><br><br>
 
