created building listing
created building listing

--- a/src/app/buliding-form/buliding-form.component.html
+++ b/src/app/buliding-form/buliding-form.component.html
@@ -18,4 +18,8 @@
   <label>Building Image</label>
   <input type="text" class="form-control" formControlName="image_path">
 
+  <div class="space">
+  <input type="submit" value="Submit">
+</div>
+
 </form>
