--- a/src/app/shared/navi/navi.component.html
+++ b/src/app/shared/navi/navi.component.html
@@ -13,10 +13,13 @@
     </label>
   </div>
 
-  <div class="nav-links">
+
+
+    <div class="nav-links">
     <a  routerLink="/login">Login</a>
     <a >Logout</a>
     <a routerLink="/signup">Create Account</a>
-    <a routerLink=""> Building List</a>
+    <a routerLink="/building-listings">Building List</a>
+
   </div>
 </div>
