--- a/src/app/building-listings/building-listings.component.html
+++ b/src/app/building-listings/building-listings.component.html
@@ -12,5 +12,7 @@
   <p>Contact Name</p>
   <p>Contact Email</p>
   <p>Square Footage</p>
-</div>
+
+  <a routerLink="/edit-building" class="button edit">Edit</a>
+  <a class="button delete">Delete</a>
 </div>
