--- a/src/app/building-listings/building-listings.component.css
+++ b/src/app/building-listings/building-listings.component.css
@@ -19,5 +19,16 @@ button {
   display: flex;
   float: right;
   margin-top: -40px;
-
 }
+
+.edit, .delete{
+  display: inline-block;
+  padding: 10px 10px;
+}
+
+
+
+
+
+
+
