--- a/src/app/edit-building/edit-building.component.html
+++ b/src/app/edit-building/edit-building.component.html
@@ -1,6 +1,6 @@
-<h1>Create Building Listing</h1>
+<h1>Edit Building Listing</h1>
 
-<form [formGroup]="buildingFormGroup">
+<form [formGroup]="editFormGroup">
   <label>Building Address</label>
   <input type= "text" class="form-control" formControlName="address"><br><br>
 
@@ -19,7 +19,7 @@
   <input type="text" class="form-control" formControlName="image_path">
 
   <div class="space">
-  <input type="submit" value="Create Listing">
+  <input type="submit" value="Edit">
 </div>
 
 </form>
