--- a/src/app/building-listings/building-listings.component.html
+++ b/src/app/building-listings/building-listings.component.html
@@ -13,6 +13,7 @@
   <p>Contact Email</p>
   <p>Square Footage</p>
 
+  <a routerLink="/building-detail">More Detail</a>
   <a routerLink="/edit-building" class="button edit">Edit</a>
   <a class="button delete">Delete</a>
 </div>
