--- a/src/app/auth/signup/signup/signup.component.html
+++ b/src/app/auth/signup/signup/signup.component.html
@@ -1,5 +1,5 @@
 <h1>Create Account</h1>
-<form [formGroup]="signupForm">
+<form [formGroup]="signupForm" (ngSubmit)="onSubmit()">
   <label for="name">First Name</label>
   <input type="text" class="form-control" id="first_name" formControlName="first_name"><br><br>
 
