--- a/src/app/building-detail/building-detail.component.html
+++ b/src/app/building-detail/building-detail.component.html
@@ -1,16 +1,14 @@
 <h1>Building Name</h1>
 
 <hr>
-<div class="row">
+<div class="row" *ngIf="building$ | async as Building">
 <img src="https://www.semissourian.com/photos/27/83/20/2783203-B.jpg" class="resize" alt="nice building">
 <div class="col">
-  <p>Address</p>
-  <p>Contact Name</p>
-  <p>Contact Email</p>
-  <p>Square Footage</p>
+  <p>Address: {{Building.building_address}}</p>
+  <p>Contact Name: {{Building.building_contact_name}}</p>
+  <p>Contact Email: {{Building.building_contact_email}}</p>
+  <p>Square Footage: {{Building.square_footage}}</p>
 </div>
 
 
-<div *ngIf="building$ | async as Building">
-  {{Building.building_address}}
-</div>
+
