--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,6 @@
 <div class="container">
   <app-navi></app-navi>
-<router-outlet></router-outlet>s
+<router-outlet></router-outlet>
 </div>
 <section id="welcome">
   <div class="back-img"></div>
@@ -60,9 +60,3 @@
   </div>
 
 </section>
-
-
-
-
-
-
