--- a/src/app/edit-building/edit-building.component.html
+++ b/src/app/edit-building/edit-building.component.html
@@ -1,6 +1,6 @@
 <h1>Edit Building Listing</h1>
 
-<form [formGroup]="editFormGroup">
+<form [formGroup]="editFormGroup" (ngSubmit)="onSubmit()">
   <label>Building Address</label>
   <input type= "text" class="form-control" formControlName="address"><br><br>
 
