--- a/src/app/buliding-form/buliding-form.component.html
+++ b/src/app/buliding-form/buliding-form.component.html
@@ -1,6 +1,6 @@
 <h1>Create Building Listing</h1>
 
-<form [formGroup]="buildingFormGroup" (ngSubmit)="onSubmit()" >
+<form [formGroup]="buildingFormGroup">
   <label>Building Address</label>
   <input type= "text" class="form-control" formControlName="building_address"><br><br>
 
