--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,19 +1,19 @@
-* {
+/* * {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
   }
-  
+
   ::-webkit-scrollbar {
     display: none;
   }
-  
+
   #welcome, #buy-or-sell, #business-directory {
     height: 100vh;
     width: 100%;
     position: relative;
   }
-  
+
   #welcome .back-img {
     width: 100%;
     height: 100%;
@@ -34,7 +34,7 @@
     background: rgb(70, 69, 69);
     opacity: 0.35;
   }
-  
+
   #welcome .nav-bar {
     position: fixed;
     z-index: 3;
@@ -43,29 +43,29 @@
     width: 100%;
     margin: 0 auto;
   }
-  
+
   .nav-bar ul {
     padding: 20px;
     text-align: center;
   }
-  
+
   .nav-bar ul li {
     display: inline-block;
     padding: 0 14px;
     font-family: helvetica;
     font-size: 1.4rem;
   }
-  
+
   .nav-bar ul li a {
     text-transform: uppercase;
     text-decoration: none;
     color: white;
   }
-  
+
   .nav-bar ul li:hover a {
       color: white;
     }
-    
+
     #buy-or-sell .second-img {
         width: 100%;
         height: 100%;
@@ -76,7 +76,7 @@
         position: absolute;
         z-index: 1;
     }
-    
+
     #business-directory .third-img {
         width: 100%;
         height: 100%;
@@ -103,7 +103,7 @@
     height:    100%;
     width: 100%;
    }
-  
+   */
   /* #welcome .title, #buy-or-sell .title, #business-directory .title .title {
     position: relative;
     z-index: 2;
@@ -122,11 +122,11 @@
     letter-spacing: 2px;
   } */
 
-  
-  .back-img, .second-img, .third-img, .fourth-img {
+
+  /* .back-img, .second-img, .third-img, .fourth-img {
     background-attachment: fixed;
   }
-  
+
 @import url("https://fonts.googleapis.com/css?family=Mukta:700");
 * {
   box-sizing: border-box;
@@ -240,6 +240,6 @@ button:hover .button-text {
     align-self: center;
     justify-self: center;
   }
-}
+} */
 
 
