--- a/src/styles.css
+++ b/src/styles.css
@@ -14,3 +14,22 @@ button.bg-green:hover {
   color: #80AC99;
 }
 
+.underline-hover {
+  position: relative;
+  text-decoration: none;
+}
+.underline-hover::after {
+  content: '';
+  position: absolute;
+  width: 0;
+  height: 2px;
+  bottom: 0;
+  left: 0;
+  background-color: white;
+  visibility: hidden;
+  transition: all 0.3s ease-in-out;
+}
+.underline-hover:hover::after {
+  visibility: visible;
+  width: 100%;
+}
