--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,6 @@
 <main class="bg-gray-50 flex flex-col min-h-screen">
   <app-nav *ngIf="showNavbar"></app-nav>
-  <div class="flex-grow">
+  <div class="flex-grow" [ngClass]="{ 'pb-40 pt-10 px-11': showNavbar }">
     <router-outlet></router-outlet>
   </div>
   <app-footer></app-footer>
