--- a/src/app/about-us/about-us.component.css
+++ b/src/app/about-us/about-us.component.css
@@ -5,37 +5,19 @@ body {
   font-family: "Roboto", sans-serif;
   position: relative;
 }
-nav {
-  width: 100%;
-  height: 100px;
-  background-color: transparent;
-  position: absolute;
-  top: 0;
-  z-index: 5;
-}
 h2,
 h3 {
-  color: #111;
+  /* color: #111;
   font-family: "Open Sans", sans-serif;
   font-size: 30px;
   font-weight: 300;
   line-height: 32px;
   margin: 0 0 22px;
-  text-align: center;
+  text-align: center; */
 }
 h3:hover {
-  cursor: pointer;
-  text-decoration: underline;
-}
-
-.header {
-  width: 100%;
-  height: 500px;
-  opacity: 0.8;
-  background-color: rgb(30, 173, 255);
-  background-image: url("https://scontent-ord5-1.xx.fbcdn.net/v/t31.18172-8/28699342_1896794077059821_6488342930255931327_o.jpg?_nc_cat=108&ccb=1-7&_nc_sid=e3f864&_nc_ohc=RV4Z9E7BOzEAX90o-sW&_nc_ht=scontent-ord5-1.xx&oh=00_AfCYnD5JgJ5Vn7w1mT2UXlzUU-wDQc_80jfWE2e7_cXI2Q&oe=6494EBB3");
-  background-size: cover;
-  background-position: bottom;
+  /* cursor: pointer; */
+  /* text-decoration: underline; */
 }
 .container {
   width: 100%;
@@ -189,9 +171,8 @@ footer p {
   padding: 0 2%;
 }
 
-1
 /* media */
-@media(max-width:1200px) {
+@media (max-width: 1200px) {
   .mission .right p {
     font-size: 0.8rem;
     margin: 20px auto;
@@ -223,8 +204,5 @@ footer p {
 @media (max-width: 768px) {
   .team .card {
     width: 100%;
-  }
-  nav {
-    height: 80px;
   }
 }
